--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="accent">#ff0082ff</color>
     <color name="accentDark">#ff0069d0</color>
+    <color name="gray_github">#f3f3f3</color>
 </resources>
