Gists list with lazy loading

--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -77,4 +77,9 @@
             android:layout_weight="1"
             android:id="@+id/num4"/>
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/content3"/>
 </LinearLayout>
