Repos fragments implemented

--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -18,7 +18,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginRight="8dp"/>
+            android:layout_marginRight="8dp" />
 
         <android.widget.EnhancedTextView
             android:layout_width="wrap_content"
@@ -28,8 +28,8 @@
             android:layout_toEndOf="@+id/imageView"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginTop="16dp" />
+
         <android.widget.EnhancedTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,7 +39,8 @@
             android:layout_below="@+id/mail"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginTop="16dp" />
+
         <android.widget.EnhancedTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,7 +49,8 @@
             android:layout_toEndOf="@+id/imageView"
             android:layout_below="@+id/blog"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="16dp" />
     </RelativeLayout>
 
     <LinearLayout
@@ -61,26 +63,33 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/num1"/>
+            android:id="@+id/num1"
+            android:clickable="true"/>
+
         <NumericTitle
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/num2"/>
+            android:id="@+id/num2"
+            android:clickable="true" />
+
         <NumericTitle
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/num3"/>
+            android:id="@+id/num3"
+            android:clickable="true" />
+
         <NumericTitle
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/num4"/>
+            android:id="@+id/num4"
+            android:clickable="true" />
     </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/content3"/>
+        android:id="@+id/content3" />
 </LinearLayout>
