--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,45 +11,60 @@
         android:layout_height="@dimen/avatar_size"
         android:background="@color/gray_github">
 
-        <ImageView
+        <LinearLayout
             android:layout_width="@dimen/avatar_size"
             android:layout_height="@dimen/avatar_size"
-            android:id="@+id/imageView"
-            android:scaleType="centerCrop"
+            android:id="@+id/avatarParent"
+            android:layout_marginRight="8dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginRight="8dp"/>
+            android:padding="8dp">
+
+            <CircularImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView"
+                android:layout_marginRight="8dp"
+                app:border_color="@color/accent"
+                app:border_width="4dp"
+                app:border="true"
+                android:src="@drawable/ic_contact_picture" />
+        </LinearLayout>
 
         <android.widget.EnhancedTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearance"
             android:id="@+id/mail"
-            android:layout_toEndOf="@+id/imageView"
+            android:layout_toEndOf="@+id/avatarParent"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="8dp"
+            app:prefixColor="@color/accent" />
+
         <android.widget.EnhancedTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearance"
             android:id="@+id/blog"
-            android:layout_toEndOf="@+id/imageView"
+            android:layout_toEndOf="@+id/avatarParent"
             android:layout_below="@+id/mail"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="8dp"
+            app:prefixColor="@color/accent" />
+
         <android.widget.EnhancedTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearance"
             android:id="@+id/joined"
-            android:layout_toEndOf="@+id/imageView"
+            android:layout_toEndOf="@+id/avatarParent"
             android:layout_below="@+id/blog"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            app:prefixColor="@color/accent" />
     </RelativeLayout>
 
     <LinearLayout
@@ -61,26 +77,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/num1"/>
+            android:id="@+id/num1" />
+
         <NumericTitle
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/num2"/>
+            android:id="@+id/num2" />
+
         <NumericTitle
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/num3"/>
+            android:id="@+id/num3" />
+
         <NumericTitle
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/num4"/>
+            android:id="@+id/num4" />
     </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/content3"/>
+        android:id="@+id/content3" />
 </LinearLayout>
