--- a/app/src/main/res/layout/row_repo.xml
+++ b/app/src/main/res/layout/row_repo.xml
@@ -1,25 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<TwoLineListItem xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:mode="twoLine"
-    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:background="@drawable/list_selector">
+    android:minHeight="?android:attr/listPreferredItemHeightLarge"
+    android:padding="8dp">
 
-    <TextView android:id="@android:id/text1"
-        android:layout_width="match_parent"
+    <ImageView
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:id="@+id/repoTypeIcon"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dip"
-        android:textAppearance="?android:attr/textAppearanceListItem" />
+        tools:text="Large Text"
+        android:id="@+id/repoName"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/repoTypeIcon"
+        android:layout_toEndOf="@id/repoTypeIcon"
+        android:layout_marginLeft="8dp"
+        android:paddingTop="0dp"
+        android:textSize="20sp"
+        android:textColor="@color/accentDark" />
 
-    <TextView android:id="@android:id/text2"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@android:id/text1"
-        android:layout_alignStart="@android:id/text1" />
+        android:text="New Text"
+        android:layout_toRightOf="@id/repoTypeIcon"
+        android:layout_toEndOf="@id/repoTypeIcon"
+        android:layout_below="@id/repoName"
+        android:layout_toLeftOf="@+id/details"
+        android:layout_toStartOf="@+id/details"
+        tools:text="New Text"
+        android:id="@+id/descriptionText"
+        android:padding="8dp" />
 
-</TwoLineListItem>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        tools:text="Small Text"
+        android:id="@+id/dateText"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/repoTypeIcon" />
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|right"
+        android:id="@+id/details"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            tools:text="Java"
+            android:id="@+id/languageText"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="4dp"
+            android:textColor="@color/gray_github_medium" />
+
+        <IconTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/star_icon_text"
+            android:id="@+id/starsIcon"
+            android:drawablePadding="4dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="4dp"
+            android:textColor="@color/gray_github_medium" />
+
+        <IconTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fork_icon_text"
+            android:drawablePadding="4dp"
+            android:id="@+id/forksIcon"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="4dp"
+            android:textColor="@color/gray_github_medium" />
+    </LinearLayout>
+</RelativeLayout>
