--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="accentDark">#ff0069d0</color>
     <color name="gray_github">#f3f3f3</color>
     <color name="gray_github_dark">#737373</color>
+    <color name="gray_github_medium">#ffaaaaaa</color>
 </resources>
