Row users margins

--- a/app/src/main/res/layout/row_user.xml
+++ b/app/src/main/res/layout/row_user.xml
@@ -3,14 +3,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/list_selector">
+    android:layout_height="72dp"
+    android:background="@drawable/list_selector"
+    android:gravity="center_vertical">
 
     <CircularImageView
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:id="@+id/imageView"
-        android:src="@drawable/ic_contact_picture"/>
+        android:src="@drawable/ic_contact_picture"
+        android:layout_margin="16dp" />
 
     <TextView
         android:layout_width="match_parent"
