--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="accent">#ff0082ff</color>
     <color name="accentDark">#ff0069d0</color>
+    <color name="complementary">#ffff7d00</color>
     <color name="gray_github">#f3f3f3</color>
     <color name="gray_github_dark">#737373</color>
     <color name="gray_github_medium">#ffaaaaaa</color>
+    <color name="white">#FFFFFF</color>
 </resources>
