--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -9,22 +9,21 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/avatar_size"
-        android:background="@color/gray_github">
+        android:background="@color/gray_github"
+        android:padding="8dp">
 
         <LinearLayout
             android:layout_width="@dimen/avatar_size"
             android:layout_height="@dimen/avatar_size"
             android:id="@+id/avatarParent"
-            android:layout_marginRight="8dp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:padding="8dp">
+            android:layout_alignParentLeft="true">
 
             <CircularImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/imageView"
-                android:layout_marginRight="8dp"
+                android:layout_margin="8dp"
                 app:border_color="@color/accent"
                 app:border_width="4dp"
                 app:border="true"
@@ -39,7 +38,7 @@
             android:layout_toEndOf="@+id/avatarParent"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="16dp" />
+            android:layout_margin="4dp" />
 
         <android.widget.EnhancedTextView
             android:layout_width="wrap_content"
@@ -50,9 +49,8 @@
             android:layout_below="@+id/mail"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            app:prefixColor="@color/accent" />
+            android:layout_margin="4dp"
+            app:prefixColor="@color/accent"/>
 
         <android.widget.EnhancedTextView
             android:layout_width="wrap_content"
@@ -63,7 +61,7 @@
             android:layout_below="@+id/blog"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="8dp"
+            android:layout_margin="4dp"
             app:prefixColor="@color/accent" />
     </RelativeLayout>
 
@@ -78,28 +76,32 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/num1"
-            android:clickable="true"/>
+            android:clickable="true"
+            app:barColor="@color/accent"/>
 
         <NumericTitle
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/num2"
-            android:clickable="true" />
+            android:clickable="true"
+            app:barColor="@color/accent" />
 
         <NumericTitle
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/num3"
-            android:clickable="true" />
+            android:clickable="true"
+            app:barColor="@color/accent" />
 
         <NumericTitle
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/num4"
-            android:clickable="true" />
+            android:clickable="true"
+            app:barColor="@color/accent" />
     </LinearLayout>
 
     <FrameLayout
