--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,4 +6,20 @@
         <item name="android:colorPrimary">@color/accent</item>
         <item name="android:colorPrimaryDark">@color/accentDark</item>
     </style>
+
+    <style name="fab">
+        <item name="android:layout_width">56dp</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/fab_button</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:layout_gravity">right|bottom</item>
+        <item name="android:elevation">@dimen/button_press</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:stateListAnimator">@anim/fab_anim</item>
+    </style>
 </resources>
