--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,15 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="fab">
+        <item name="android:layout_width">56dp</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/fab_button</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:layout_gravity">right|bottom</item>
+    </style>
 </resources>
