--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,11 @@
     <color name="gray_github_dark">#737373</color>
     <color name="gray_github_medium">#ffaaaaaa</color>
     <color name="white">#FFFFFF</color>
+    
+    <integer-array name="colorsSmooth">
+        <item>@color/accent</item>
+        <item>@color/complementary</item>
+        <item>@color/accentDark</item>
+        <item>@color/gray_github_dark</item>
+    </integer-array>
 </resources>
