added  bugsense / deactivate gists / screens

--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -79,13 +79,13 @@
             android:clickable="true"
             app:barColor="@color/accent"/>
 
-        <NumericTitle
+       <!-- <NumericTitle
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/num2"
             android:clickable="true"
-            app:barColor="@color/accent" />
+            app:barColor="@color/accent" />-->
 
         <NumericTitle
             android:layout_width="match_parent"
