--- a/app/src/main/res/layout/row_user.xml
+++ b/app/src/main/res/layout/row_user.xml
@@ -2,8 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="wrap_content"
-    android:minWidth="300dp"
+    android:layout_width="match_parent"
     android:layout_height="72dp"
     android:background="@drawable/list_selector"
     android:gravity="center_vertical">
