--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,4 +35,14 @@
         <item name="android:paddingBottom">16dp</item>
         <item name="android:layout_gravity">right|bottom</item>
     </style>
+    <style name="fab_inv">
+        <item name="android:layout_width">56dp</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/fab_inv_button</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:layout_gravity">right|bottom</item>
+    </style>
 </resources>
