--- a/app/src/main/res/layout/repos_fragment_manager.xml
+++ b/app/src/main/res/layout/repos_fragment_manager.xml
@@ -31,7 +31,7 @@
             app:barColor="@color/complementary"/>
     </LinearLayout>
 
-    <FrameLayout
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/content" />
