--- a/app/src/main/res/layout/repo_detail_fragment.xml
+++ b/app/src/main/res/layout/repo_detail_fragment.xml
@@ -1,58 +1,55 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyActivity"
     android:orientation="vertical"
     android:background="@color/accent">
 
-    <FrameLayout
+    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
         android:layout_width="match_parent"
-        android:layout_height="96dp">
+        android:layout_height="4dp"
+        android:indeterminate="true"
+        app:spb_sections_count="4"
+        app:spb_color="@color/complementary"
+        app:spb_speed="2.0"
+        app:spb_stroke_width="4dp"
+        app:spb_stroke_separator_length="4dp"
+        app:spb_reversed="true"
+        app:spb_mirror_mode="true"
+        android:id="@+id/smoothBar" />
 
-        <android.widget.RepositoryInfo
-            android:layout_width="match_parent"
-            android:layout_height="96dp"
-            android:id="@+id/repoInfoFields"
-            android:paddingBottom="8dp" />
-
-        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:indeterminate="true"
-            app:spb_sections_count="4"
-            app:spb_color="@color/complementary"
-            app:spb_speed="2.0"
-            app:spb_stroke_width="4dp"
-            app:spb_stroke_separator_length="4dp"
-            app:spb_reversed="true"
-            app:spb_mirror_mode="true"
-            android:id="@+id/smoothBar" />
-    </FrameLayout>
-
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="48dp"
+        android:orientation="horizontal">
 
-        <FrameLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/filesTree"
-            android:layout_marginTop="30dp"
-            android:background="@color/gray_github"/>
+        <android.widget.TabTitle
+            style="@style/tab_repos"
+            app:barColor="@color/complementary"
+            android:text="@string/Readme"
+            android:id="@+id/tabReadme" />
 
-        <ImageButton
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            style="@style/fab_inv"
-            android:id="@+id/floatButton"
-            android:gravity="center"
-            android:paddingTop="12dp"
-            android:layout_gravity="top|right"
-            android:layout_marginRight="16dp"
-            android:scaleType="centerInside"/>
+        <android.widget.TabTitle
+            style="@style/tab_repos"
+            app:barColor="@color/complementary"
+            android:text="@string/Source"
+            android:id="@+id/tabSource" />
 
-    </FrameLayout>
+        <android.widget.TabTitle
+            style="@style/tab_repos"
+            app:barColor="@color/complementary"
+            android:text="@string/Info"
+            android:id="@+id/tabInfo"
+            android:visibility="gone"/>
+
+    </LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:id="@+id/pager" />
 
 </LinearLayout>
