--- a/app/src/main/res/layout/repo_detail_fragment.xml
+++ b/app/src/main/res/layout/repo_detail_fragment.xml
@@ -7,44 +7,49 @@
     android:orientation="vertical"
     android:background="@color/accent">
 
-    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:indeterminate="true"
-        app:spb_sections_count="4"
-        app:spb_color="@color/complementary"
-        app:spb_speed="2.0"
-        app:spb_stroke_width="4dp"
-        app:spb_stroke_separator_length="4dp"
-        app:spb_reversed="true"
-        app:spb_mirror_mode="true"
-        android:id="@+id/smoothBar" />
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal">
+        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:indeterminate="true"
+            app:spb_sections_count="4"
+            app:spb_color="@color/complementary"
+            app:spb_speed="2.0"
+            app:spb_stroke_width="4dp"
+            app:spb_stroke_separator_length="4dp"
+            app:spb_reversed="true"
+            app:spb_mirror_mode="true"
+            android:id="@+id/smoothBar" />
 
-        <android.widget.TabTitle
-            style="@style/tab_repos"
-            app:barColor="@color/complementary"
-            android:text="@string/Readme"
-            android:id="@+id/tabReadme" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal">
 
-        <android.widget.TabTitle
-            style="@style/tab_repos"
-            app:barColor="@color/complementary"
-            android:text="@string/Source"
-            android:id="@+id/tabSource" />
+            <android.widget.TabTitle
+                style="@style/tab_repos"
+                app:barColor="@color/complementary"
+                android:text="@string/Readme"
+                android:id="@+id/tabReadme" />
 
-        <android.widget.TabTitle
-            style="@style/tab_repos"
-            app:barColor="@color/complementary"
-            android:text="@string/Info"
-            android:id="@+id/tabInfo"
-            android:visibility="gone"/>
+            <android.widget.TabTitle
+                style="@style/tab_repos"
+                app:barColor="@color/complementary"
+                android:text="@string/Source"
+                android:id="@+id/tabSource" />
 
-    </LinearLayout>
+            <android.widget.TabTitle
+                style="@style/tab_repos"
+                app:barColor="@color/complementary"
+                android:text="@string/Info"
+                android:id="@+id/tabInfo"
+                android:visibility="gone" />
+
+        </LinearLayout>
+    </FrameLayout>
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
