--- a/app/src/main/res/layout/repo_detail_fragment.xml
+++ b/app/src/main/res/layout/repo_detail_fragment.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/accent">
 
-    <FrameLayout
+    <FrameLayout android:id="@+id/repoDetailInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
